@@ -25,12 +25,13 @@ import io.crate.Streamer;
 import io.crate.TimestampFormat;
 import org.apache.lucene.util.BytesRef;
 
-public class TimestampType extends LongType implements Streamer<Long>, DataTypeFactory {
+public class TimestampType extends LongType implements Streamer<Long> {
 
     public static final TimestampType INSTANCE = new TimestampType();
     public static final int ID = 11;
 
-    private TimestampType() {}
+    private TimestampType() {
+    }
 
     @Override
     public int id() {
@@ -48,33 +49,30 @@ public class TimestampType extends LongType implements Streamer<Long>, DataTypeF
             return null;
         }
         if (value instanceof BytesRef) {
-            return valueFromString(((BytesRef)value).utf8ToString());
+            return valueFromString(((BytesRef) value).utf8ToString());
         }
         if (value instanceof String) {
             return valueFromString((String) value);
         }
+        // we treat float and double values as seconds with milliseconds as fractions
+        // see timestamp documentation
         if (value instanceof Double) {
-            return ((Number)(((Double)value) * 1000)).longValue();
+            return ((Number) (((Double) value) * 1000)).longValue();
         }
         if (value instanceof Float) {
-            return ((Number)(((Float)value) * 1000)).longValue();
+            return ((Number) (((Float) value) * 1000)).longValue();
         }
         if (!(value instanceof Long)) {
-            return ((Number)value).longValue();
+            return ((Number) value).longValue();
         }
-        return (Long)value;
+        return (Long) value;
     }
 
     private Long valueFromString(String s) {
         try {
-            return new Long(s);
+            return Long.valueOf(s);
         } catch (NumberFormatException e) {
             return TimestampFormat.parseTimestampString(s);
         }
-    }
-
-    @Override
-    public DataType<?> create() {
-        return TimestampType.INSTANCE;
     }
 }
